api-spec for KPI (post & put); remove most unwraps; return Error json rather than string in case of errors
